fix z-index#2

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body,
   100% {
     transform: translate3D(0px, 0px, -50px);
     opacity: 0;
-    z-index: 1;
+    z-index: -1;
   }
 }
 @keyframes hide-for {
